mon: add monmap.rename() step when can get mkfs:monmap

Fixes: http://tracker.ceph.com/issues/19350

Signed-off-by: huanwen ren <ren.huanwen@zte.com.cn>